Adds detection for MacBook Air 11" (2013)

--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9390,3 +9390,21 @@
     model: MacBook Air 13" (2012)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Safari/8536.30.1 CFNetwork/596.5 Darwin/12.5.0 (x86_64) (MacBookAir6%2C1)
+  os:
+    name: Mac
+    version: 10.8.5
+    platform: x64
+  client:
+    type: browser
+    name: Safari
+    version: 8536.30.1
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 11" (2013)
+  os_family: Mac
+  browser_family: Safari
