--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -590,6 +590,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Air 13" (2012)'
 
+    - regex: 'MacBookAir6%2C1'
+      device: 'desktop'
+      model: 'MacBook Air 11" (2013)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
