Adds detection for MacBook Air 13" (2013)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -594,6 +594,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Air 11" (2013)'
 
+    - regex: 'MacBookAir6%2C2'
+      device: 'desktop'
+      model: 'MacBook Air 13" (2013)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
