--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -592,11 +592,11 @@ Apple:
 
     - regex: 'MacBookAir6%2C1'
       device: 'desktop'
-      model: 'MacBook Air 11" (2013)'
+      model: 'MacBook Air 11" (2013-2014)'
 
     - regex: 'MacBookAir6%2C2'
       device: 'desktop'
-      model: 'MacBook Air 13" (2013)'
+      model: 'MacBook Air 13" (2013-2014)'
 
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
