--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -516,7 +516,7 @@ TiPhone:
 
 # Apple
 Apple:
-  regex: '(?:iTunes-)?Apple[ _]?TV|(?:Apple-|iTunes-)?(?<!like )(?:iPad|iPhone)|iPh[0-9],[0-9]|CFNetwork|HomePod|Watch ?OS|Watch1,[12]'
+  regex: '(?:iTunes-)?Apple[ _]?(?:TV)?|(?:Apple-|iTunes-)?(?<!like )(?:iPad|iPhone)|iPh[0-9],[0-9]|CFNetwork|HomePod|Watch ?OS|Watch1,[12]'
   models:
     - regex: 'HomePod'
       device: 'smart speaker'
@@ -562,39 +562,39 @@ Apple:
       device: 'wearable'
       model: 'Watch Series $1 44mm'
 
-    - regex: 'MacBookAir2%2C1'
+    - regex: 'MacBookAir2(?:%2C|,)1'
       device: 'desktop'
       model: 'MacBook Air (2009)'
 
-    - regex: 'MacBookAir3%2C1'
+    - regex: 'MacBookAir3(?:%2C|,)1'
       device: 'desktop'
       model: 'MacBook Air 11" (2010)'
 
-    - regex: 'MacBookAir3%2C2'
+    - regex: 'MacBookAir3(?:%2C|,)2'
       device: 'desktop'
       model: 'MacBook Air 13" (2010)'
 
-    - regex: 'MacBookAir4%2C1'
+    - regex: 'MacBookAir4(?:%2C|,)1'
       device: 'desktop'
       model: 'MacBook Air 11" (2011)'
 
-    - regex: 'MacBookAir4%2C2'
+    - regex: 'MacBookAir4(?:%2C|,)2'
       device: 'desktop'
       model: 'MacBook Air 13" (2011)'
 
-    - regex: 'MacBookAir5%2C1'
+    - regex: 'MacBookAir5(?:%2C|,)1'
       device: 'desktop'
       model: 'MacBook Air 11" (2012)'
 
-    - regex: 'MacBookAir5%2C2'
+    - regex: 'MacBookAir5(?:%2C|,)2'
       device: 'desktop'
       model: 'MacBook Air 13" (2012)'
 
-    - regex: 'MacBookAir6%2C1'
+    - regex: 'MacBookAir6(?:%2C|,)1'
       device: 'desktop'
       model: 'MacBook Air 11" (2013-2014)'
 
-    - regex: 'MacBookAir6%2C2'
+    - regex: 'MacBookAir6(?:%2C|,)2'
       device: 'desktop'
       model: 'MacBook Air 13" (2013-2014)'
 
