Adds detection for MacBook Air 11" (2015) and improves version detection for macOS

--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9424,3 +9424,19 @@
     model: MacBook Air 13" (2013)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Word/15.22.506 (Mac OS/10.11.5; Desktop; en-US; NonAppStore; Apple/MacBookAir7,1)
+  os:
+    name: Mac
+    version: 10.11.5
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 15.22.506
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 11" (2015)
+  os_family: Mac
+  browser_family: Unknown
