--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -598,6 +598,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Air 13" (2013-2014)'
 
+    - regex: 'MacBookAir7(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook Air 11" (2015)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
