--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -767,7 +767,7 @@
   name: 'Mac'
   version: '$1'
 
-- regex: 'Mac (\d+(?:[_\.]\d+)+)'
+- regex: 'Mac (?:OS/)?(\d+(?:[_\.]\d+)+)'
   name: 'Mac'
   version: '$1'
 
