Adds detection for MacBook Air 13" (2015-2017)

--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9440,3 +9440,19 @@
     model: MacBook Air 11" (2015)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office PowerPoint/15.29.1215 (Mac OS/10.11.5; Desktop; en-US; NonAppStore; Apple/MacBookAir7,2)
+  os:
+    name: Mac
+    version: 10.11.5
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office PowerPoint
+    version: 15.29.1215
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 13" (2015-2017)
+  os_family: Mac
+  browser_family: Unknown
