--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -602,6 +602,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Air 11" (2015)'
 
+    - regex: 'MacBookAir7(?:%2C|,)2'
+      device: 'desktop'
+      model: 'MacBook Air 13" (2015-2017)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
