Adds detection for MacBook Air 13" (2018)

--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9456,3 +9456,19 @@
     model: MacBook Air 13" (2015-2017)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/16.43.1108 (Mac OS/10.15.6; Desktop; es-MX; NonAppStore; Apple/MacBookAir8,1)
+  os:
+    name: Mac
+    version: 10.15.6
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.43.1108
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 13" (2018)
+  os_family: Mac
+  browser_family: Unknown
