--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -606,6 +606,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Air 13" (2015-2017)'
 
+    - regex: 'MacBookAir8(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook Air 13" (2018)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
