--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9472,3 +9472,19 @@
     model: MacBook Air 13" (2018)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/16.43.1108 (Mac OS/11.0.1; Desktop; es-MX; NonAppStore; Apple/MacBookAir8,2)
+  os:
+    name: Mac
+    version: 11.0.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.43.1108
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 13" (2019)
+  os_family: Mac
+  browser_family: Unknown
