--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -610,6 +610,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Air 13" (2018)'
 
+    - regex: 'MacBookAir8(?:%2C|,)2'
+      device: 'desktop'
+      model: 'MacBook Air 13" (2019)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
