Adds detection for MacBook Air 13" (2020)

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -299,3 +299,9 @@
     type: mobile app
     name: Microsoft Office Word
     version: 16.11.319
+-
+  user_agent: Microsoft Office Excel/16.44.1213 (Mac OS/11.1; Desktop; en-US; AppStore; Apple/MacBookAir10,1)
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.44.1213
