--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9488,3 +9488,35 @@
     model: MacBook Air 13" (2019)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/16.43.1108 (Mac OS/10.15.7; Desktop; es-ES; NonAppStore; Apple/MacBookAir9,1)
+  os:
+    name: Mac
+    version: 10.15.7
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.43.1108
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 13" (2020)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office Excel/16.44.1213 (Mac OS/11.1; Desktop; en-US; AppStore; Apple/MacBookAir10,1)
+  os:
+    name: Mac
+    version: "11.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.44.1213
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 13" (2020)
+  os_family: Mac
+  browser_family: Unknown
