--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -614,6 +614,14 @@ Apple:
       device: 'desktop'
       model: 'MacBook Air 13" (2019)'
 
+    - regex: 'MacBookAir9(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook Air 13" (2020)'
+
+    - regex: 'MacBookAir10(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook Air 13" (2020)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
