--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -516,7 +516,7 @@ TiPhone:
 
 # Apple
 Apple:
-  regex: '(?:iTunes-)?Apple[ _]?(?:TV)?|(?:Apple-|iTunes-)?(?<!like )(?:iPad|iPhone)|iPh[0-9],[0-9]|CFNetwork|HomePod|Watch ?OS|Watch1,[12]'
+  regex: '(?:iTunes-)?Apple(<!WebKit)[ _]?(?:TV)?|(?:Apple-|iTunes-)?(?<!like )(?:iPad|iPhone)|iPh[0-9],[0-9]|CFNetwork|HomePod|Watch ?OS|Watch1,[12]'
   models:
     - regex: 'HomePod'
       device: 'smart speaker'
