--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9299,7 +9299,7 @@
   client:
     type: browser
     name: Safari
-    version: ""
+    version: 7537.78.2
     engine: WebKit
     engine_version: ""
   device:
@@ -9317,7 +9317,7 @@
   client:
     type: browser
     name: Safari
-    version: ""
+    version: 9537.86.7.8
     engine: WebKit
     engine_version: ""
   device:
@@ -9399,7 +9399,7 @@
   client:
     type: browser
     name: Safari
-    version: ""
+    version: 8536.30.1
     engine: WebKit
     engine_version: ""
   device:
