--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1899,7 +1899,7 @@
   version: ''
   engine:
     default: 'WebKit'
-- regex: 'Version/(\d+[\.\d]+).*Safari/|Safari/\d+'
+- regex: 'Safari/(\d+[\.\d]+)|Version/(\d+[\.\d]+).*Safari/'
   name: 'Safari'
   version: '$1'
   engine:
