--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9405,7 +9405,7 @@
   device:
     type: desktop
     brand: Apple
-    model: MacBook Air 11" (2013)
+    model: MacBook Air 11" (2013-2014)
   os_family: Mac
   browser_family: Safari
 - 
@@ -9421,7 +9421,7 @@
   device:
     type: desktop
     brand: Apple
-    model: MacBook Air 13" (2013)
+    model: MacBook Air 13" (2013-2014)
   os_family: Mac
   browser_family: Unknown
 - 
