--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9520,3 +9520,21 @@
     model: MacBook Air 13" (2020)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Safari/9537.73.11 CFNetwork/673.0.3 Darwin/13.0.0 (x86_64) (MacBookAir6%2C2)
+  os:
+    name: Mac
+    version: "10.9"
+    platform: x64
+  client:
+    type: browser
+    name: Safari
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 13" (2013-2014)
+  os_family: Mac
+  browser_family: Safari
