--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -4283,7 +4283,7 @@
   os_family: Mac
   browser_family: Firefox
 - 
-  user_agent: 'Safari/9537.73.11 CFNetwork/673.0.3 Darwin/13.0.0 (x86_64) (MacBookAir6%2C2)'
+  user_agent: Safari/9537.73.11 CFNetwork/673.0.3 Darwin/13.0.0 (x86_64) (MacBookAir6%2C2)
   os:
     name: Mac
     version: "10.9"
@@ -4297,7 +4297,7 @@
   device:
     type: desktop
     brand: Apple
-    model: ""
+    model: MacBook Air 13" (2013-2014)
   os_family: Mac
   browser_family: Safari
 - 
@@ -5892,3 +5892,251 @@
     model: ""
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: Safari/9537.86.7.8 CFNetwork/673.6 Darwin/13.4.0 (x86_64) (MacBookAir2%2C1)
+  os:
+    name: Mac
+    version: 10.9.5
+    platform: x64
+  client:
+    type: browser
+    name: Safari
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air (2009)
+  os_family: Mac
+  browser_family: Safari
+- 
+  user_agent: Safari/7537.78.2 CFNetwork/520.5.3 Darwin/11.4.2 (x86_64) (MacBookAir3%2C1)
+  os:
+    name: Mac
+    version: "10.7"
+    platform: x64
+  client:
+    type: browser
+    name: Safari
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 11" (2010)
+  os_family: Mac
+  browser_family: Safari
+- 
+  user_agent: Safari/9537.86.7.8 CFNetwork/673.6 Darwin/13.4.0 (x86_64) (MacBookAir3%2C2)
+  os:
+    name: Mac
+    version: 10.9.5
+    platform: x64
+  client:
+    type: browser
+    name: Safari
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 13" (2010)
+  os_family: Mac
+  browser_family: Safari
+- 
+  user_agent: 1PasswordThumbs/1 CFNetwork/596.5 Darwin/12.5.0 (x86_64) (MacBookAir4%2C1)
+  os:
+    name: Mac
+    version: 10.8.5
+    platform: x64
+  client:
+    type: mobile app
+    name: 1Password
+    version: "1"
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 11" (2011)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: 1PasswordThumbs/1 CFNetwork/596.5 Darwin/12.5.0 (x86_64) (MacBookAir4%2C2)
+  os:
+    name: Mac
+    version: 10.8.5
+    platform: x64
+  client:
+    type: mobile app
+    name: 1Password
+    version: "1"
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 13" (2011)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: 1PasswordThumbs/1 CFNetwork/596.4.3 Darwin/12.4.0 (x86_64) (MacBookAir5%2C1)
+  os:
+    name: Mac
+    version: 10.8.4
+    platform: x64
+  client:
+    type: mobile app
+    name: 1Password
+    version: "1"
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 11" (2012)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: 1PasswordThumbs/1 CFNetwork/520.5.1 Darwin/11.4.2 (x86_64) (MacBookAir5%2C2)
+  os:
+    name: Mac
+    version: "10.7"
+    platform: x64
+  client:
+    type: mobile app
+    name: 1Password
+    version: "1"
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 13" (2012)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Safari/8536.30.1 CFNetwork/596.5 Darwin/12.5.0 (x86_64) (MacBookAir6%2C1)
+  os:
+    name: Mac
+    version: 10.8.5
+    platform: x64
+  client:
+    type: browser
+    name: Safari
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 11" (2013-2014)
+  os_family: Mac
+  browser_family: Safari
+- 
+  user_agent: 1PasswordThumbs/1 CFNetwork/596.5 Darwin/12.5.0 (x86_64) (MacBookAir6%2C2)
+  os:
+    name: Mac
+    version: 10.8.5
+    platform: x64
+  client:
+    type: mobile app
+    name: 1Password
+    version: "1"
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 13" (2013-2014)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Word/15.22.506 (Mac OS/10.11.5; Desktop; en-US; NonAppStore; Apple/MacBookAir7,1)
+  os:
+    name: Mac
+    version: 10.11.5
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 15.22.506
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 11" (2015)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office PowerPoint/15.29.1215 (Mac OS/10.11.5; Desktop; en-US; NonAppStore; Apple/MacBookAir7,2)
+  os:
+    name: Mac
+    version: 10.11.5
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office PowerPoint
+    version: 15.29.1215
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 13" (2015-2017)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/16.43.1108 (Mac OS/10.15.6; Desktop; es-MX; NonAppStore; Apple/MacBookAir8,1)
+  os:
+    name: Mac
+    version: 10.15.6
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.43.1108
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 13" (2018)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/16.43.1108 (Mac OS/11.0.1; Desktop; es-MX; NonAppStore; Apple/MacBookAir8,2)
+  os:
+    name: Mac
+    version: 11.0.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.43.1108
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 13" (2019)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/16.43.1108 (Mac OS/10.15.7; Desktop; es-ES; NonAppStore; Apple/MacBookAir9,1)
+  os:
+    name: Mac
+    version: 10.15.7
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.43.1108
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 13" (2020)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office Excel/16.44.1213 (Mac OS/11.1; Desktop; en-US; AppStore; Apple/MacBookAir10,1)
+  os:
+    name: Mac
+    version: "11.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.44.1213
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 13" (2020)
+  os_family: Mac
+  browser_family: Unknown
