feat(device) detect brand LG models: Velvet 5G (LM-G900, LM-G900N), Velvet 4G (LM-G910),  K22 (LM-K200), K31 (LM-K300), K42 (LM-K420), K51 (LM-K500), Q51 (LM-Q510N), Q61 (LM-Q630, LM-Q630N),  Stylo 6 (LM-Q730), V50 ThinQ (LM-V450), K40S (LM-X430), V60 ThinQ 5G (LM-V600), K50 (LM-X520),  WING (LM-F100N)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8858,8 +8858,10 @@ LG:
       model: 'Style 3'
     - regex: 'LM-Q710|LML713DL'
       model: 'Stylo 4'
-    - regex: 'LM-Q720'
+    - regex: 'LM-Q720(?:[);/ ]|$)'
       model: 'Stylo 5'
+    - regex: 'LM-Q730(?:[);/ ]|$)'
+      model: 'Stylo 6'
     - regex: 'LM-G710(N|VM)?'
       model: 'G7 ThinQ'
     - regex: 'LM-X210CM'
@@ -8892,11 +8894,13 @@ LG:
       model: 'K4'
     - regex: 'LM-X420'
       model: 'K40'
+    - regex: 'LM-X430(?:[);/ ]|$)'
+      model: 'K40S'
     - regex: 'LG-X220'
       model: 'K5'
     - regex: 'LM-X540'
       model: 'K50S'
-    - regex: '802LG'
+    - regex: '(?:802LG|LM-X520)(?:[);/ ]|$)'
       model: 'K50'
     - regex: '402LG'
       model: 'Spray'
@@ -8916,7 +8920,7 @@ LG:
       model: 'Aristo 3'
     - regex: 'LM-V40(?:5|9N)?(?:[);/ ]|$)'
       model: 'V40 ThinQ'
-    - regex: 'LM-V500N'
+    - regex: 'LM-(?:V500N|V450)(?:[);/ ]|$)'
       model: 'V50 ThinQ'
     - regex: 'LM-V510N'
       model: 'V50S ThinQ'
@@ -8952,9 +8956,11 @@ LG:
       model: 'V30 Plus'
     - regex: 'L-51A(?:[);/ ]|$)'
       model: 'V60'
-    - regex: 'L-52A(?:[);/ ]|$)'
-      model: 'Velvet'
-    - regex: 'A001LG(?:[);/ ]|$)'
+    - regex: '(?:L-52A|LM-G900N?)(?:[);/ ]|$)'
+      model: 'Velvet 5G'
+    - regex: '(?:LM-G910)(?:[);/ ]|$)'
+      model: 'Velvet 4G'
+    - regex: '(?:A001LG|LM-V600)(?:[);/ ]|$)'
       model: 'V60 ThinQ 5G'
     - regex: '(?:LG-)?VS410PP'
       model: 'Optimus Zone'
@@ -8984,6 +8990,18 @@ LG:
       model: 'K20'
     - regex: '(?:LG-?)?[MT]P260'
       model: 'K20 Plus'
+    - regex: 'LM-K200(?:[);/ ]|$)'
+      model: 'K22'
+    - regex: 'LM-K300(?:[);/ ]|$)'
+      model: 'K31'
+    - regex: 'LM-K420(?:[);/ ]|$)'
+      model: 'K42'
+    - regex: 'LM-K500(?:[);/ ]|$)'
+      model: 'K51'
+    - regex: 'LM-Q510N(?:[);/ ]|$)'
+      model: 'Q51'
+    - regex: 'LM-Q630N?(?:[);/ ]|$)'
+      model: 'Q61'
     - regex: '(?:LG-)?M700(?:N|A|DSK|AN)?'
       model: 'Q6'
     - regex: 'LM-X440IM'
@@ -9018,7 +9036,7 @@ LG:
       model: 'Lancet'
     - regex: 'VS870 4G'
       model: 'Lucid 2'
-    - regex: 'LM-F100'
+    - regex: 'LM-F100N?(?:[);/ ]|$)'
       device: 'phablet'
       model: 'WING'
 
