feat(device) detect brand Condor model: T3 feat(test) added tests for brands: Vertex, Intex

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3738,7 +3738,7 @@ ConCorde:
 
 # Condor
 Condor:
-  regex: 'Allure (?:M[13]|X)|Griffe T[256789]|TFX712G|TRA-901G|TGW[-]?(710G|709)|(?:PGN\-?[456][012][0-9]|PHS\-601|PHQ519|PHQ52[056]|PKT\-301|Plume (?:H1|L[123]|P8))(?:[);/ ]|$)|CTAB[^/;]+ Build'
+  regex: 'Allure (?:M[13]|X)|Griffe T[2356789]|TFX712G|TRA-901G|TGW[-]?(710G|709)|(?:PGN\-?[456][012][0-9]|PHS\-601|PHQ519|PHQ52[056]|PKT\-301|Plume (?:H1|L[123]|P8))(?:[);/ ]|$)|CTAB[^/;]+ Build'
   device: 'smartphone'
   models:
     - regex: 'CTAB([^/;]+) Build'
@@ -3800,20 +3800,10 @@ Condor:
       model: 'Plume P6'
     - regex: 'PGN\-?521'
       model: 'Griffe G4 Plus'
-    - regex: 'Griffe T2'
-      model: 'Griffe T2'
-    - regex: 'Griffe T5'
-      model: 'Griffe T5'
-    - regex: 'Griffe T6'
-      model: 'Griffe T6'
-    - regex: 'Griffe T7'
-      model: 'Griffe T7'
-    - regex: 'Griffe T8 Plus'
-      model: 'Griffe T8 Plus'
-    - regex: 'Griffe T8'
-      model: 'Griffe T8'
-    - regex: 'Griffe T9'
-      model: 'Griffe T9'
+    - regex: 'Griffe T([0-9]) Plus'
+      model: 'Griffe T$1 Plus'
+    - regex: 'Griffe T([0-9])'
+      model: 'Griffe T$1'
     - regex: 'PGN\-?522'
       model: 'P6 Plus'
     - regex: 'PGN\-?523'
