--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6156,3 +6156,21 @@
     model: MacBook Pro (2008)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Safari5525.27.1 CFNetwork/422.15.2 Darwin/9.6.2 (i386) (MacBookPro5%2C1)
+  os:
+    name: Mac
+    version: "10.5"
+    platform: x86
+  client:
+    type: browser
+    name: Safari
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 15" (2008)
+  os_family: Mac
+  browser_family: Safari
