--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -626,6 +626,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro (2008)'
 
+    - regex: 'MacBookPro5(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook Pro 15" (2008)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
