--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6174,3 +6174,21 @@
     model: MacBook Pro 15" (2008)
   os_family: Mac
   browser_family: Safari
+- 
+  user_agent: Safari/8536.29.13 CFNetwork/596.3.3 Darwin/12.3.0 (x86_64) (MacBookPro5%2C2)
+  os:
+    name: Mac
+    version: 10.8.3
+    platform: x64
+  client:
+    type: browser
+    name: Safari
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 17" (2009)
+  os_family: Mac
+  browser_family: Safari
