--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -630,6 +630,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 15" (2008)'
 
+    - regex: 'MacBookPro5(?:%2C|,)2'
+      device: 'desktop'
+      model: 'MacBook Pro 17" (2009)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
