Adds detection for MacBook Pro 13" (2009)

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6192,3 +6192,19 @@
     model: MacBook Pro 17" (2009)
   os_family: Mac
   browser_family: Safari
+- 
+  user_agent: 1PasswordThumbs/1 CFNetwork/454.12.4 Darwin/10.8.0 (i386) (MacBookPro5%2C5)
+  os:
+    name: Mac
+    version: "10.6"
+    platform: x86
+  client:
+    type: mobile app
+    name: 1Password
+    version: "1"
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 13" (2009)
+  os_family: Mac
+  browser_family: Unknown
