--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -634,6 +634,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 17" (2009)'
 
+    - regex: 'MacBookPro5(?:%2C|,)5'
+      device: 'desktop'
+      model: 'MacBook Pro 13" (2009)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
