Adds detection for MacBook Pro 15" (2009)

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6208,3 +6208,21 @@
     model: MacBook Pro 13" (2009)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Safari/6531.22.7 CFNetwork/454.9.4 Darwin/10.3.0 (i386) (MacBookPro5%2C3)
+  os:
+    name: Mac
+    version: "10.6"
+    platform: x86
+  client:
+    type: browser
+    name: Safari
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 15" (2009)
+  os_family: Mac
+  browser_family: Safari
