--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -634,6 +634,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 17" (2009)'
 
+    - regex: 'MacBookPro5(?:%2C|,)3'
+      device: 'desktop'
+      model: 'MacBook Pro 15" (2009)'
+
     - regex: 'MacBookPro5(?:%2C|,)5'
       device: 'desktop'
       model: 'MacBook Pro 13" (2009)'
