Improves detection for MacBook Pro 15" (2009)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -634,7 +634,7 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 17" (2009)'
 
-    - regex: 'MacBookPro5(?:%2C|,)3'
+    - regex: 'MacBookPro5(?:%2C|,)[34]'
       device: 'desktop'
       model: 'MacBook Pro 15" (2009)'
 
