Adds detection for MacBook Pro 17" (2010)

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6244,3 +6244,21 @@
     model: MacBook Pro 15" (2009)
   os_family: Mac
   browser_family: Safari
+- 
+  user_agent: Safari/8536.26.17 CFNetwork/596.2.3 Darwin/12.2.0 (x86_64) (MacBookPro6%2C1)
+  os:
+    name: Mac
+    version: 10.8.2
+    platform: x64
+  client:
+    type: browser
+    name: Safari
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 17" (2010)
+  os_family: Mac
+  browser_family: Safari
