--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -642,6 +642,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 13" (2009)'
 
+    - regex: 'MacBookPro6(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook Pro 17" (2010)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
