Adds detection for MacBook Pro 15" (2010)

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6262,3 +6262,21 @@
     model: MacBook Pro 17" (2010)
   os_family: Mac
   browser_family: Safari
+- 
+  user_agent: Safari/7534.57.2 CFNetwork/520.4.3 Darwin/11.4.0 (x86_64) (MacBookPro6%2C2)
+  os:
+    name: Mac
+    version: 10.7.4
+    platform: x64
+  client:
+    type: browser
+    name: Safari
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 15" (2010)
+  os_family: Mac
+  browser_family: Safari
