--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -646,6 +646,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 17" (2010)'
 
+    - regex: 'MacBookPro6(?:%2C|,)2'
+      device: 'desktop'
+      model: 'MacBook Pro 15" (2010)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
