--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6280,3 +6280,21 @@
     model: MacBook Pro 15" (2010)
   os_family: Mac
   browser_family: Safari
+- 
+  user_agent: Safari/9537.75.14 CFNetwork/673.4 Darwin/13.1.0 (x86_64) (MacBookPro7%2C1)
+  os:
+    name: Mac
+    version: 10.9.2
+    platform: x64
+  client:
+    type: browser
+    name: Safari
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 13" (2010)
+  os_family: Mac
+  browser_family: Safari
