--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -650,6 +650,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 15" (2010)'
 
+    - regex: 'MacBookPro7(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook Pro 13" (2010)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
