Adds detection for MacBook Pro 13" (2011)

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6298,3 +6298,21 @@
     model: MacBook Pro 13" (2010)
   os_family: Mac
   browser_family: Safari
+- 
+  user_agent: Safari/9537.75.14 CFNetwork/673.4 Darwin/13.2.0 (x86_64) (MacBookPro8%2C1)
+  os:
+    name: Mac
+    version: 10.9.3
+    platform: x64
+  client:
+    type: browser
+    name: Safari
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 13" (2011)
+  os_family: Mac
+  browser_family: Safari
