--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -654,6 +654,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 13" (2010)'
 
+    - regex: 'MacBookPro8(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook Pro 13" (2011)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
