Adds detection for MacBook Pro 15" (2011)

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6316,3 +6316,21 @@
     model: MacBook Pro 13" (2011)
   os_family: Mac
   browser_family: Safari
+- 
+  user_agent: Safari/9537.73.11 CFNetwork/673.0.3 Darwin/13.0.0 (x86_64) (MacBookPro8%2C2)
+  os:
+    name: Mac
+    version: "10.9"
+    platform: x64
+  client:
+    type: browser
+    name: Safari
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 15" (2011)
+  os_family: Mac
+  browser_family: Safari
