--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6334,3 +6334,21 @@
     model: MacBook Pro 15" (2011)
   os_family: Mac
   browser_family: Safari
+- 
+  user_agent: Safari/6533.21.1 CFNetwork/454.11.12 Darwin/10.7.3 (x86_64) (MacBookPro8%2C3)
+  os:
+    name: Mac
+    version: "10.6"
+    platform: x64
+  client:
+    type: browser
+    name: Safari
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 17" (2011)
+  os_family: Mac
+  browser_family: Safari
