--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -662,6 +662,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 15" (2011)'
 
+    - regex: 'MacBookPro8(?:%2C|,)3'
+      device: 'desktop'
+      model: 'MacBook Pro 17" (2011)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
