Adds detection for MacBook Pro 15" (2012)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -666,6 +666,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 17" (2011)'
 
+    - regex: 'MacBookPro9(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook Pro 15" (2012)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
