--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6352,3 +6352,19 @@
     model: MacBook Pro 17" (2011)
   os_family: Mac
   browser_family: Safari
+- 
+  user_agent: 1PasswordThumbs/1 CFNetwork/596.5 Darwin/12.5.0 (x86_64) (MacBookPro9%2C1)
+  os:
+    name: Mac
+    version: 10.8.5
+    platform: x64
+  client:
+    type: mobile app
+    name: 1Password
+    version: "1"
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 15" (2012)
+  os_family: Mac
+  browser_family: Unknown
