--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -670,6 +670,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 15" (2012)'
 
+    - regex: 'MacBookPro9(?:%2C|,)2'
+      device: 'desktop'
+      model: 'MacBook Pro 13" (2012)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
