Adds detection for MacBook Pro 15" (2012-2013)

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6384,3 +6384,19 @@
     model: MacBook Pro 13" (2012)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: 1PasswordThumbs/1 CFNetwork/673.0.3 Darwin/13.0.0 (x86_64) (MacBookPro10%2C1)
+  os:
+    name: Mac
+    version: "10.9"
+    platform: x64
+  client:
+    type: mobile app
+    name: 1Password
+    version: "1"
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 15" (2012-2013)
+  os_family: Mac
+  browser_family: Unknown
