Adds detection for MacBook Pro 13" (2012-2013)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -678,6 +678,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 15" (2012-2013)'
 
+    - regex: 'MacBookPro10(?:%2C|,)2'
+      device: 'desktop'
+      model: 'MacBook Pro 13" (2012-2013)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
