--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6400,3 +6400,19 @@
     model: MacBook Pro 15" (2012-2013)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: 1PasswordThumbs/1 CFNetwork/596.5 Darwin/12.5.0 (x86_64) (MacBookPro10%2C2)
+  os:
+    name: Mac
+    version: 10.8.5
+    platform: x64
+  client:
+    type: mobile app
+    name: 1Password
+    version: "1"
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 13" (2012-2013)
+  os_family: Mac
+  browser_family: Unknown
