--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6416,3 +6416,21 @@
     model: MacBook Pro 13" (2012-2013)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Sleipnir/4.5.1 CFNetwork/673.3 Darwin/13.2.0 (x86_64) (MacBookPro11,1)
+  os:
+    name: Mac
+    version: 10.9.3
+    platform: x64
+  client:
+    type: browser
+    name: Sleipnir
+    version: 4.5.1
+    engine: ""
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 13" (2013-2014)
+  os_family: Mac
+  browser_family: Unknown
