--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -686,6 +686,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 13" (2013-2014)'
 
+    - regex: 'MacBookPro11(?:%2C|,)[23]'
+      device: 'desktop'
+      model: 'MacBook Pro 15" (2013-2014)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
