--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6498,3 +6498,19 @@
     model: MacBook Pro 15" (2015)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office PowerPoint/16.44.1213 (Mac OS/10.15.5; Desktop; en-US; NonAppStore; Apple/MacBookPro12,1)
+  os:
+    name: Mac
+    version: 10.15.5
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office PowerPoint
+    version: 16.44.1213
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 13" (2015)
+  os_family: Mac
+  browser_family: Unknown
