--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -694,6 +694,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 15" (2015)'
 
+    - regex: 'MacBookPro12(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook Pro 13" (2015)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
