Adds detection for MacBook Pro 13" (2016)

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6514,3 +6514,35 @@
     model: MacBook Pro 13" (2015)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office PowerPoint/15.30.107 (Mac OS/10.12.3; Desktop; en-US; NonAppStore; Apple/MacBookPro13,1)
+  os:
+    name: Mac
+    version: 10.12.3
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office PowerPoint
+    version: 15.30.107
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 13" (2016)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/16.11.311 (Mac OS/10.13.3; Desktop; en-US; NonAppStore; Apple/MacBookPro13,2)
+  os:
+    name: Mac
+    version: 10.13.3
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.11.311
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 13" (2016)
+  os_family: Mac
+  browser_family: Unknown
