--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -698,6 +698,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 13" (2015)'
 
+    - regex: 'MacBookPro13(?:%2C|,)[12]'
+      device: 'desktop'
+      model: 'MacBook Pro 13" (2016)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
