Adds detection for MacBook Pro 15" (2016)

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6546,3 +6546,19 @@
     model: MacBook Pro 13" (2016)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/16.43.1108 (Mac OS/11.0.1; Desktop; es-MX; NonAppStore; Apple/MacBookPro13,3)
+  os:
+    name: Mac
+    version: 11.0.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.43.1108
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 15" (2016)
+  os_family: Mac
+  browser_family: Unknown
