--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -702,6 +702,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 13" (2016)'
 
+    - regex: 'MacBookPro13(?:%2C|,)3'
+      device: 'desktop'
+      model: 'MacBook Pro 15" (2016)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
