--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -706,6 +706,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 15" (2016)'
 
+    - regex: 'MacBookPro14(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook Pro 13" (2017)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
