Improves detection for MacBook Pro 13" (2017)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -706,7 +706,7 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 15" (2016)'
 
-    - regex: 'MacBookPro14(?:%2C|,)1'
+    - regex: 'MacBookPro14(?:%2C|,)[12]'
       device: 'desktop'
       model: 'MacBook Pro 13" (2017)'
 
