Adds detection for MacBook Pro 15" (2017)

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6594,3 +6594,19 @@
     model: MacBook Pro 13" (2017)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/16.11.319 (Mac OS/10.13.4; Desktop; en-US; NonAppStore; Apple/MacBookPro14,3)
+  os:
+    name: Mac
+    version: 10.13.4
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.11.319
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 15" (2017)
+  os_family: Mac
+  browser_family: Unknown
