--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -714,6 +714,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 15" (2017)'
 
+    - regex: 'MacBookPro15(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook Pro 15" (2018-2019)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
