Adds detection for MacBook Pro 15" (2019)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -718,6 +718,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 15" (2018-2019)'
 
+    - regex: 'MacBookPro15(?:%2C|,)3'
+      device: 'desktop'
+      model: 'MacBook Pro 15" (2019)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
