--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6626,3 +6626,19 @@
     model: MacBook Pro 15" (2018-2019)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office Excel/16.43.1110 (Mac OS/11.0.1; Desktop; es-MX; AppStore; Apple/MacBookPro15,3)
+  os:
+    name: Mac
+    version: 11.0.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.43.1110
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 15" (2019)
+  os_family: Mac
+  browser_family: Unknown
