Adds detection for MacBook Pro 13" (2018-2019)

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6642,3 +6642,19 @@
     model: MacBook Pro 15" (2019)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office PowerPoint/16.44.1213 (Mac OS/11.1; Desktop; es-ES; NonAppStore; Apple/MacBookPro15,2)
+  os:
+    name: Mac
+    version: "11.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office PowerPoint
+    version: 16.44.1213
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 13" (2018-2019)
+  os_family: Mac
+  browser_family: Unknown
