--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -718,6 +718,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 15" (2018-2019)'
 
+    - regex: 'MacBookPro15(?:%2C|,)2'
+      device: 'desktop'
+      model: 'MacBook Pro 13" (2018-2019)'
+
     - regex: 'MacBookPro15(?:%2C|,)3'
       device: 'desktop'
       model: 'MacBook Pro 15" (2019)'
