--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6658,3 +6658,19 @@
     model: MacBook Pro 13" (2018-2019)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/16.43.1108 (Mac OS/10.15.3; Desktop; en-US; NonAppStore; Apple/MacBookPro15,4)
+  os:
+    name: Mac
+    version: 10.15.3
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.43.1108
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 13" (2019)
+  os_family: Mac
+  browser_family: Unknown
