Adds detection for MacBook Pro 16" (2019)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -730,6 +730,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 13" (2019)'
 
+    - regex: 'MacBookPro16(?:%2C|,)[14]'
+      device: 'desktop'
+      model: 'MacBook Pro 16" (2019)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
