--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6706,3 +6706,35 @@
     model: MacBook Pro 16" (2019)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/16.43.1108 (Mac OS/11.0.1; Desktop; es-MX; NonAppStore; Apple/MacBookPro16,2)
+  os:
+    name: Mac
+    version: 11.0.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.43.1108
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 13" (2020)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/16.43.1108 (Mac OS/11.0.1; Desktop; es-MX; NonAppStore; Apple/MacBookPro16,3)
+  os:
+    name: Mac
+    version: 11.0.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.43.1108
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 13" (2020)
+  os_family: Mac
+  browser_family: Unknown
