--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -734,6 +734,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 16" (2019)'
 
+    - regex: 'MacBookPro16(?:%2C|,)[23]'
+      device: 'desktop'
+      model: 'MacBook Pro 13" (2020)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
