Improves detection for MacBook Pro 13" (2020)

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6738,3 +6738,19 @@
     model: MacBook Pro 13" (2020)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/16.44.1213 (Mac OS/11.1; Desktop; es-MX; AppStore; Apple/MacBookPro17,1)
+  os:
+    name: Mac
+    version: "11.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.44.1213
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 13" (2020)
+  os_family: Mac
+  browser_family: Unknown
