--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -738,6 +738,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Pro 13" (2020)'
 
+    - regex: 'MacBookPro17(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook Pro 13" (2020)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
