Adds detection for Perfect Browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2879,3 +2879,19 @@
     version: "2.0"
     engine: WebKit
     engine_version: "531"
+-
+  user_agent: Perfect%20Browser/9.1 CFNetwork/672.0.8 Darwin/14.0.0
+  client:
+    type: browser
+    name: Perfect Browser
+    version: "9.1"
+    engine: Webkit
+    engine_version: ""
+-
+  user_agent: Perfect%20Browser-iPad/2.6 CFNetwork/485.13.8 Darwin/11.0.0
+  client:
+    type: browser
+    name: Perfect Browser
+    version: "2.6"
+    engine: Webkit
+    engine_version: ""
