--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Perfect Browser (http://www.perfectbrowser.com/)
+- regex: 'Perfect%20Browser(?:-iPad)?/(\d+[\.\d]+)'
+  name: 'Perfect Browser'
+  version: '$1'
+  engine:
+    default: 'Webkit'
+
 # Phantom Browser (https://www.lg.com/)
 - regex: 'Browser/Phantom/V(\d+[\.\d]+)'
   name: 'Phantom Browser'
