Adds detection for Microsoft Office OneNote

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -305,3 +305,9 @@
     type: mobile app
     name: Microsoft Office Excel
     version: 16.44.1213
+-
+  user_agent: Microsoft Office OneNote/16.43/201106 (iOS/14.0.1; Tablet; es-MX; AppStore; Apple/iPad11,6)
+  client:
+    type: mobile app
+    name: Microsoft Office OneNote
+    version: "16.43"
