--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -277,7 +277,6 @@
   name: '1Password'
   version: '$1'
 
-# https://apps.apple.com/app/microsoft-word/id462054704
-- regex: '(?:Microsoft Office )?(Excel|PowerPoint|Word)/([\d\.]+)'
+- regex: '(?:Microsoft Office )?(Excel|OneNote|PowerPoint|Word)/([\d\.]+)'
   name: 'Microsoft Office $1'
   version: '$2'
