Adds detection for Microsoft Office Mobile

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -311,3 +311,9 @@
     type: mobile app
     name: Microsoft Office OneNote
     version: "16.43"
+-
+  user_agent: Microsoft Office Mobile/2.44.1211 (iOS/14.4; Phone; en-US; AppStore; Apple/iPhone8,4)
+  client:
+    type: mobile app
+    name: Microsoft Office Mobile
+    version: 2.44.1211
