--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -277,6 +277,10 @@
   name: '1Password'
   version: '$1'
 
-- regex: '(?:Microsoft Office )?(Excel|Mobile|OneNote|PowerPoint|Word)/([\d\.]+)'
+- regex: '(?:Microsoft Office )?(Excel|OneNote|PowerPoint|Word)/([\d\.]+)'
   name: 'Microsoft Office $1'
   version: '$2'
+
+- regex: 'Microsoft Office Mobile/([\d\.]+)'
+  name: 'Microsoft Office Mobile'
+  version: '$1'
