Improves detection for Perfect Browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2895,3 +2895,27 @@
     version: "2.6"
     engine: Webkit
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (iPad; CPU OS 12_1_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0 Perfect/22.4 Mobile/15E148 Safari/604.1
+  client:
+    type: browser
+    name: Perfect Browser
+    version: "22.4"
+    engine: Webkit
+    engine_version: 605.1.15
+-
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 12_0_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0 Perfect/22.2.1 Mobile/15E148 Safari/604.1
+  client:
+    type: browser
+    name: Perfect Browser
+    version: 22.2.1
+    engine: Webkit
+    engine_version: 605.1.15
+-
+  user_agent: PerfectBrowserPro/25.5 CFNetwork/1197 Darwin/20.0.0
+  client:
+    type: browser
+    name: Perfect Browser
+    version: "25.5"
+    engine: Webkit
+    engine_version: ""
