--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6025,7 +6025,7 @@
   device:
     type: desktop
     brand: Apple
-    model: MacBook Air 11" (2013-2014)
+    model: MacBook Air 11" (2013)
   os_family: Mac
   browser_family: Safari
 - 
@@ -6041,7 +6041,7 @@
   device:
     type: desktop
     brand: Apple
-    model: MacBook Air 13" (2013-2014)
+    model: MacBook Air 13" (2013)
   os_family: Mac
   browser_family: Unknown
 - 
@@ -6073,7 +6073,7 @@
   device:
     type: desktop
     brand: Apple
-    model: MacBook Air 13" (2015-2017)
+    model: MacBook Air 13" (2015)
   os_family: Mac
   browser_family: Unknown
 - 
@@ -6397,7 +6397,7 @@
   device:
     type: desktop
     brand: Apple
-    model: MacBook Pro 15" (2012-2013)
+    model: MacBook Pro 15" (2012)
   os_family: Mac
   browser_family: Unknown
 - 
@@ -6413,7 +6413,7 @@
   device:
     type: desktop
     brand: Apple
-    model: MacBook Pro 13" (2012-2013)
+    model: MacBook Pro 13" (2012)
   os_family: Mac
   browser_family: Unknown
 - 
@@ -6431,7 +6431,7 @@
   device:
     type: desktop
     brand: Apple
-    model: MacBook Pro 13" (2013-2014)
+    model: MacBook Pro 13" (2013)
   os_family: Mac
   browser_family: Unknown
 - 
@@ -6447,7 +6447,7 @@
   device:
     type: desktop
     brand: Apple
-    model: MacBook Pro 15" (2013-2014)
+    model: MacBook Pro 15" (2013)
   os_family: Mac
   browser_family: Unknown
 - 
@@ -6463,7 +6463,7 @@
   device:
     type: desktop
     brand: Apple
-    model: MacBook Pro 15" (2013-2014)
+    model: MacBook Pro 15" (2013)
   os_family: Mac
   browser_family: Unknown
 - 
@@ -6623,7 +6623,7 @@
   device:
     type: desktop
     brand: Apple
-    model: MacBook Pro 15" (2018-2019)
+    model: MacBook Pro 15" (2018)
   os_family: Mac
   browser_family: Unknown
 - 
@@ -6655,7 +6655,7 @@
   device:
     type: desktop
     brand: Apple
-    model: MacBook Pro 13" (2018-2019)
+    model: MacBook Pro 13" (2018)
   os_family: Mac
   browser_family: Unknown
 - 
