--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -592,11 +592,11 @@ Apple:
 
     - regex: 'MacBookAir6(?:%2C|,)1'
       device: 'desktop'
-      model: 'MacBook Air 11" (2013-2014)'
+      model: 'MacBook Air 11" (2013)'
 
     - regex: 'MacBookAir6(?:%2C|,)2'
       device: 'desktop'
-      model: 'MacBook Air 13" (2013-2014)'
+      model: 'MacBook Air 13" (2013)'
 
     - regex: 'MacBookAir7(?:%2C|,)1'
       device: 'desktop'
@@ -604,7 +604,7 @@ Apple:
 
     - regex: 'MacBookAir7(?:%2C|,)2'
       device: 'desktop'
-      model: 'MacBook Air 13" (2015-2017)'
+      model: 'MacBook Air 13" (2015)'
 
     - regex: 'MacBookAir8(?:%2C|,)1'
       device: 'desktop'
@@ -676,19 +676,19 @@ Apple:
 
     - regex: 'MacBookPro10(?:%2C|,)1'
       device: 'desktop'
-      model: 'MacBook Pro 15" (2012-2013)'
+      model: 'MacBook Pro 15" (2012)'
 
     - regex: 'MacBookPro10(?:%2C|,)2'
       device: 'desktop'
-      model: 'MacBook Pro 13" (2012-2013)'
+      model: 'MacBook Pro 13" (2012)'
 
     - regex: 'MacBookPro11(?:%2C|,)1'
       device: 'desktop'
-      model: 'MacBook Pro 13" (2013-2014)'
+      model: 'MacBook Pro 13" (2013)'
 
     - regex: 'MacBookPro11(?:%2C|,)[23]'
       device: 'desktop'
-      model: 'MacBook Pro 15" (2013-2014)'
+      model: 'MacBook Pro 15" (2013)'
 
     - regex: 'MacBookPro11(?:%2C|,)[45]'
       device: 'desktop'
@@ -716,11 +716,11 @@ Apple:
 
     - regex: 'MacBookPro15(?:%2C|,)1'
       device: 'desktop'
-      model: 'MacBook Pro 15" (2018-2019)'
+      model: 'MacBook Pro 15" (2018)'
 
     - regex: 'MacBookPro15(?:%2C|,)2'
       device: 'desktop'
-      model: 'MacBook Pro 13" (2018-2019)'
+      model: 'MacBook Pro 13" (2018)'
 
     - regex: 'MacBookPro15(?:%2C|,)3'
       device: 'desktop'
