--- a/Tests/fixtures/feed_reader.yml
+++ b/Tests/fixtures/feed_reader.yml
@@ -432,7 +432,7 @@
   device:
     type: desktop
     brand: Apple
-    model: MacBook Pro 15" (2012-2013)
+    model: MacBook Pro 15" (2012)
   os_family: Mac
   browser_family: Unknown
 - 
