Adds detection for Fenix operating system

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1714,3 +1714,17 @@
     short_name: IOS
     version: 13.3.1
     platform: ""
+-
+  user_agent: Biyubi/5.0 (Sistema Fenix; G11; Familia Toledo; es-mx)
+  os:
+    name: Fenix
+    short_name: FEN
+    version: ""
+    platform: ""
+-
+  user_agent: Biyubi/4.5 (WinFenix; G11; Familia Toledo; MX)
+  os:
+    name: Fenix
+    short_name: FEN
+    version: ""
+    platform: ""
