--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -186,6 +186,11 @@
   name: 'Ordissimo'
   version: ''
 
+# Fenix (https://fenixlinux.com/)
+- regex: '(?:Win|Sistema )Fenix'
+  name: 'Fenix'
+  version: ''
+
 - regex: 'TOS; Linux'
   name: 'TmaxOS'
   version: ''
