Adds detection for Biyubi browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2919,3 +2919,19 @@
     version: "25.5"
     engine: Webkit
     engine_version: ""
+-
+  user_agent: Biyubi/5.0 (Sistema Fenix; G11; Familia Toledo; es-mx)
+  client:
+    type: browser
+    name: Biyubi
+    version: "5.0"
+    engine: ""
+    engine_version: ""
+-
+  user_agent: Biyubi/4.5 (WinFenix; G11; Familia Toledo; MX)
+  client:
+    type: browser
+    name: Biyubi
+    version: "4.5"
+    engine: ""
+    engine_version: ""
