--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,11 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Biyubi (http://www.biyubi.com/)
+- regex: 'Biyubi/(\d+[\.\d]+)'
+  name: 'Biyubi'
+  version: '$1'
+
 # Perfect Browser (http://www.perfectbrowser.com/)
 - regex: '(?:Perfect%20Browser(?:-iPad)?|Perfect(?:BrowserPro)?)/(\d+[\.\d]+)'
   name: 'Perfect Browser'
