feat(bot) improved detection Pingdom Bot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3936,3 +3936,12 @@
     producer:
       name: Roku, Inc.
       url: https://roku.com
+-
+  user_agent: Mozilla/5.0 (Unknown; Linux x86_64) AppleWebKit/534.34 (KHTML, like Gecko) PingdomTMS/0.8.5 Safari/534.34
+  bot:
+    name: Pingdom Bot
+    category: Site Monitor
+    url: ""
+    producer:
+      name: Pingdom AB
+      url: https://www.pingdom.com
